--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha --exit"
+    "test": "mocha \"test/**/*.test.js\""
   },
   "author": "",
   "license": "ISC",
