--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,7 +15,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.20.0"
   },
   "devDependencies": {
     "chai": "^6.2.1",
