--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@fullcalendar/common": "^5.11.5",
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "react-icons": "^5.5.0"
   }
 }
