--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@fullcalendar/common": "^5.11.5",
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongoose": "^9.0.0",
     "react-icons": "^5.5.0"
   }
 }
