--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,11 +8,11 @@
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
-    "@fullcalendar/timegrid": "^6.1.19",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "mongoose": "^9.0.0",
     "react": "^19.2.0",
